objects/Case.object
<CustomObject>
    <fields>
        <fullName>IVD_Complaint__c</fullName>
        <label>IVD Complaint?</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>In_Network__c</fullName>
        <defaultValue>false</defaultValue>
        <label>In-Network</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Initial_Outreach__c</fullName>
        <label>Initial Outreach</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>&gt;48 Hours</fullName>
                    <label>Greater Than 48 Hours</label>
                </value>
                <value>
                    <fullName>&lt;48 Hours</fullName>
                    <label>Less Than 48 Hours</label>
                </value>
                <value>
                    <fullName>N/A</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Initiated__c</fullName>
        <label>Initiated</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>Action__c</controllingField>
            <valueSetDefinition>
                <value>
                    <fullName>CANCEL-External</fullName>
                </value>
                <value>
                    <fullName>CANCEL-Internal</fullName>
                </value>
                <value>
                    <fullName>TAT ALERT-External</fullName>
                </value>
                <value>
                    <fullName>TAT ALERT-Internal</fullName>
                </value>
                <value>
                    <fullName>AMEND-External</fullName>
                </value>
                <value>
                    <fullName>AMEND-Internal</fullName>
                </value>
                <value>
                    <fullName>CORRECTED-External</fullName>
                </value>
                <value>
                    <fullName>CORRECTED-Internal</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Insur_Max_OOP__c</fullName>
        <label>Insur Max OOP</label>
        <precision>12</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Insurance_Issue__c</fullName>
        <label>Issue detail</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <controllingField>Billing_Problem_Issue__c</controllingField>
            <valueSetDefinition>
                <value>
                    <fullName>missing</fullName>
                </value>
                <value>
                    <fullName>expired</fullName>
                </value>
                <value>
                    <fullName>denied</fullName>
                </value>
                <value>
                    <fullName>ID #s</fullName>
                </value>
                <value>
                    <fullName>wrong policy holder</fullName>
                </value>
                <value>
                    <fullName>wrong payor</fullName>
                </value>
                <value>
                    <fullName>payor not found</fullName>
                </value>
                <value>
                    <fullName>3rd party payor</fullName>
                </value>
                <value>
                    <fullName>unable to verify</fullName>
                </value>
                <value>
                    <fullName>Secondary Insurance</fullName>
                </value>
                <value>
                    <fullName>Tertiary Insurance</fullName>
                </value>
                <value>
                    <fullName>Unrelated ICD10</fullName>
                </value>
                <value>
                    <fullName>ICD10 code is for Secondary Dx</fullName>
                </value>
                <value>
                    <fullName>Incomplete code</fullName>
                </value>
                <value>
                    <fullName>Missing Clinical Dx/ Cancer type</fullName>
                </value>
                <value>
                    <fullName>Missing ICD10</fullName>
                </value>
                <value>
                    <fullName>Missing US Address</fullName>
                </value>
                <value>
                    <fullName>Missing Phone Number needed for OOP over $100.00</fullName>
                </value>
                <value>
                    <fullName>Verify Pt&apos;s name</fullName>
                </value>
                <value>
                    <fullName>Verify DOB</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Insurance_OOP_Remaining__c</fullName>
        <inlineHelpText>This field is a hard cap on OOP Max. Entering &apos;0&apos; is NOT the same as leaving it blank. Entering &apos;0&apos; means the patient owes nothing; leaving this field blank assumes we don&apos;t have this information.</inlineHelpText>
        <label>Insurance OOP Max</label>
        <precision>7</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Int_l_G360_Australia_IVD_Kit_DRUZY_Trial__c</fullName>
        <inlineHelpText>380936 - Guardant360 Blood Collection Kit, IUO International Australia DRUZY Clinical Trial</inlineHelpText>
        <label>Int&apos;l G360 Australia IVD Kit-DRUZY Trial</label>
        <precision>6</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Int_l_G360_CE_IVD_Kit_SKorea_Janssen__c</fullName>
        <inlineHelpText>380854E - Guardant360 Blood Collection Kit, CE IVD International, S. Korea Janssen Clinical Trial</inlineHelpText>
        <label>Int&apos;l G360 S Korea IVD Kit-Janssen Trial</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Int_l_G360_S_Korea_IVD_Kit_DRUZY_Trial__c</fullName>
        <inlineHelpText>378819E-DRUZY - Guardant360 Blood Collection Kit, CE IVD International, S. Korea Druzy Clinical Trial</inlineHelpText>
        <label>Int&apos;l G360 SKorea CE IVD Kit-DRUZY Trial</label>
        <precision>6</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>International_G360_Brazil_IVD_Kit__c</fullName>
        <inlineHelpText>379516E</inlineHelpText>
        <label>International G360 Brazil IVD Kit</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Issue_Type_Description__c</fullName>
        <label>Issue Type Description</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Issue_Type__c</fullName>
        <label>Issue Type</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>Issue__c</controllingField>
            <valueSetDefinition>
                <value>
                    <fullName>Accessibility</fullName>
                </value>
                <value>
                    <fullName>Call not returned</fullName>
                </value>
                <value>
                    <fullName>Call TAT</fullName>
                </value>
                <value>
                    <fullName>Clinical Consultant issue</fullName>
                </value>
                <value>
                    <fullName>Collateral Content</fullName>
                </value>
                <value>
                    <fullName>Compromised</fullName>
                </value>
                <value>
                    <fullName>Damaged</fullName>
                </value>
                <value>
                    <fullName>Delayed Response</fullName>
                </value>
                <value>
                    <fullName>Draw help</fullName>
                </value>
                <value>
                    <fullName>Drug inquiries</fullName>
                </value>
                <value>
                    <fullName>Employee Attitude</fullName>
                </value>
                <value>
                    <fullName>Employee rude</fullName>
                </value>
                <value>
                    <fullName>Employee uninformed</fullName>
                </value>
                <value>
                    <fullName>Employee Unresponsive</fullName>
                </value>
                <value>
                    <fullName>Enter Other Issue</fullName>
                </value>
                <value>
                    <fullName>ERD</fullName>
                </value>
                <value>
                    <fullName>Expired Tube</fullName>
                </value>
                <value>
                    <fullName>Fasting required?</fullName>
                </value>
                <value>
                    <fullName>Financial assistance</fullName>
                </value>
                <value>
                    <fullName>General info</fullName>
                </value>
                <value>
                    <fullName>Help understanding</fullName>
                </value>
                <value>
                    <fullName>Help with</fullName>
                </value>
                <value>
                    <fullName>Help with condition</fullName>
                </value>
                <value>
                    <fullName>Help with options</fullName>
                </value>
                <value>
                    <fullName>Illegible</fullName>
                </value>
                <value>
                    <fullName>Insurance</fullName>
                </value>
                <value>
                    <fullName>International</fullName>
                </value>
                <value>
                    <fullName>Interpretation</fullName>
                </value>
                <value>
                    <fullName>Invoice</fullName>
                </value>
                <value>
                    <fullName>Medical/technical</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Issue__c</fullName>
        <label>Issue</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Billing</fullName>
                </value>
                <value>
                    <fullName>Client Relations/Courtesy</fullName>
                </value>
                <value>
                    <fullName>Communication</fullName>
                </value>
                <value>
                    <fullName>Company/Website</fullName>
                </value>
                <value>
                    <fullName>COVID-19</fullName>
                </value>
                <value>
                    <fullName>ERD</fullName>
                </value>
                <value>
                    <fullName>Fax</fullName>
                </value>
                <value>
                    <fullName>Health Guidance</fullName>
                </value>
                <value>
                    <fullName>Information Request</fullName>
                </value>
                <value>
                    <fullName>Kit</fullName>
                </value>
                <value>
                    <fullName>Lab Report</fullName>
                </value>
                <value>
                    <fullName>Lab Report/TRFs</fullName>
                </value>
                <value>
                    <fullName>Marketing Material</fullName>
                </value>
                <value>
                    <fullName>Marketing Materials</fullName>
                </value>
                <value>
                    <fullName>Materials</fullName>
                </value>
                <value>
                    <fullName>Missing NY Waiver</fullName>
                </value>
                <value>
                    <fullName>Patient</fullName>
                </value>
                <value>
                    <fullName>Patient Report</fullName>
                </value>
                <value>
                    <fullName>Patient Report Data</fullName>
                </value>
                <value>
                    <fullName>Portal</fullName>
                </value>
                <value>
                    <fullName>Portal Data</fullName>
                </value>
                <value>
                    <fullName>Positive Feedback</fullName>
                </value>
                <value>
                    <fullName>Sample</fullName>
                </value>
                <value>
                    <fullName>Specimen Collection</fullName>
                </value>
                <value>
                    <fullName>Stage I/II</fullName>
                </value>
                <value>
                    <fullName>Supplies</fullName>
                </value>
                <value>
                    <fullName>Technical</fullName>
                </value>
                <value>
                    <fullName>TRF</fullName>
                </value>
                <value>
                    <fullName>TRF/TUBE</fullName>
                </value>
                <value>
                    <fullName>TUBE</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Kit_Clinical_SWOG_domestic__c</fullName>
        <label>Kit-Clinical (SWOG) domestic</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Kit_Supplies_AE_Email_Sent__c</fullName>
        <label>Kit Supplies AE Email Sent</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Kit_with_TRF__c</fullName>
        <label>Kit with TRF (domestic)</label>
        <precision>6</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Kits_Clinical_domestic__c</fullName>
        <inlineHelpText>378556 - Guardant Health 360 Specimen Collection &amp; Shipping Kit (Domestic/Commercial)</inlineHelpText>
        <label>CLIA Calif LDT Kit</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Kits_Clinical_int_l__c</fullName>
        <inlineHelpText>378819 - Guardant Health 360 Specimen Collection &amp; Shipping Kit (International/Commercial)</inlineHelpText>
        <label>Kits-Clinical (int&apos;l-NOT EU)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Kits_Research_domestic__c</fullName>
        <inlineHelpText>378381 - Guardant Health Specimen Collection &amp; Shipping Kit (Domestic/Research)</inlineHelpText>
        <label>Kits-Research (domestic)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Kits_Research_int_l__c</fullName>
        <inlineHelpText>378818 - Guardant Health Specimen Collection &amp; Shipping Kit (International/Research)</inlineHelpText>
        <label>Kits-Research (int&apos;l)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Kits_last_7_days__c</fullName>
        <formula>IF((CreatedDate&gt;=NOW()-7),  Total_Kits__c, 0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Hidden field used for reporting</inlineHelpText>
        <label>Kits last 7 days</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>LCD_Code_obtained__c</fullName>
        <defaultValue>false</defaultValue>
        <label>LCD Code obtained</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>LDT_Kit_no_TRF__c</fullName>
        <inlineHelpText>379858</inlineHelpText>
        <label>LDT Kit no TRF</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>LUNAR1_Blood_Collection_Kit_IUO_Domesti__c</fullName>
        <inlineHelpText>380761 LUNAR1 Blood Collection Kit, IUO Domestic</inlineHelpText>
        <label>LUNAR1 Blood Collection Kit IUO Domestic</label>
        <precision>6</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>LUNAR1_Blood_Collection_Kit_IUO_Intl__c</fullName>
        <inlineHelpText>380762 LUNAR1 Blood Collection Kit, IUO International</inlineHelpText>
        <label>LUNAR1 Blood Collection Kit IUO Intl</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>LUNAR_Clinical_Trial_TRF__c</fullName>
        <description>FRM-PRT-000040 R2</description>
        <inlineHelpText>553224-PrePrinted</inlineHelpText>
        <label>LUNAR Clinical Trial TRF (COBRA)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>LUNAR_IUO_Preprinted_TRF__c</fullName>
        <inlineHelpText>553285-Preprinted LUNAR IUO Preprinted TRF</inlineHelpText>
        <label>LUNAR IUO Preprinted TRF</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>LUNAR_Preprinted_TRF__c</fullName>
        <inlineHelpText>550478 - Preprinted
LUNAR TRF: TST-TRF-005 R2</inlineHelpText>
        <label>LUNAR Preprinted TRF</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>LUNAR_RUO_Kit_Int_l__c</fullName>
        <inlineHelpText>379836 (Obsolete in Nov 2019, 380760 is replacement)</inlineHelpText>
        <label>LUNAR RUO Kit, International - 379836</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>LUNAR_RUO_Kit_Intl_380760__c</fullName>
        <inlineHelpText>380760, Lunar RUO Kit - International (replaced 379836)</inlineHelpText>
        <label>LUNAR RUO Kit, International</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>LV_Problem_Case_ID__c</fullName>
        <externalId>true</externalId>
        <label>LV Problem Case ID</label>
        <length>20</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Length_of_Time_Days__c</fullName>
        <label>Length of Time (Days)</label>
        <precision>4</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Lot__c</fullName>
        <label>Lot #</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Lunar_Clinical_Kit_Domestic__c</fullName>
        <inlineHelpText>380759 - Lunar RUO Kit, Domestic</inlineHelpText>
        <label>LUNAR RUO Kit, Domestic</label>
        <precision>6</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>MDR_Number__c</fullName>
        <label>MDR #</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MDR__c</fullName>
        <label>MDR?</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Merck_VIS_PrePrinted_TRF__c</fullName>
        <inlineHelpText>549834-PrePrinted - Guardant 360 Preprinted-Site Specific Trial Test Requisition Form VISION MS200095-0022 (TST-TRF-011)</inlineHelpText>
        <label>Merck/VIS PrePrinted TRF</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Mobile_Phlebotomy_Individual_Draw_Kit_wi__c</fullName>
        <inlineHelpText>380926 - Mobile Phlebotomy Individual Draw Kit with mask</inlineHelpText>
        <label>MP Indiv Draw Kit with Mask</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Month_Created__c</fullName>
        <formula>CASE(MONTH(DATEVALUE(CreatedDate)),
1,&apos;JAN&apos;,
2,&apos;FEB&apos;,
3,&apos;MAR&apos;,
4,&apos;APR&apos;,
5,&apos;MAY&apos;,
6,&apos;JUN&apos;,
7,&apos;JUL&apos;,
8,&apos;AUG&apos;,
9,&apos;SEP&apos;,
10,&apos;OCT&apos;,
11,&apos;NOV&apos;,
12,&apos;DEC&apos;,
&apos;???&apos;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Month Created</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Month_Year__c</fullName>
        <formula>Month_Created__c + &quot;-&quot; + TEXT(YEAR(DATEVALUE(CreatedDate)))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Used for reports and dashboards.</inlineHelpText>
        <label>Month-Year</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Monthly_Income__c</fullName>
        <label>Monthly Income</label>
        <precision>10</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Next_Attempt__c</fullName>
        <formula>IF(X2nd_Attempt__c=FALSE, &quot;Second&quot;, 
 IF(X3rd_Attempt__c=FALSE, &quot;Third&quot;, 
  IF(X4th_Attempt__c=FALSE, &quot;Fourth&quot;, &quot;Fifth +&quot; 
)
)
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Next Attempt</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Next_Follow_Up_Date__c</fullName>
        <defaultValue>CASE(
    MOD( TODAY() - DATE( 1900, 1, 7 ), 7 ),
    5, TODAY() + 3,
    6, TODAY() + 2,
    TODAY()+1
)</defaultValue>
        <inlineHelpText>When would you like the next reminder to follow up on this case?</inlineHelpText>
        <label>Next Follow-Up Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>No_CAPA_Reason__c</fullName>
        <label>No CAPA - Reason</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>No_Code_obtained__c</fullName>
        <defaultValue>false</defaultValue>
        <label>No Code obtained</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Non_LCD_Code_obtained__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Non-LCD Code obtained</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Not_Cancelled__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Not Cancelled</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>OOP_Max__c</fullName>
        <description>Field retired per PS in favor of new &apos;Out_of_pocket_Max__c&apos;</description>
        <label>Old OOP Max</label>
        <precision>8</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>OOP_Override_Amount__c</fullName>
        <inlineHelpText>Must check &apos;OOP Override?&apos; checkbox before filling out this box</inlineHelpText>
        <label>OOP Override Amount</label>
        <precision>7</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>OOP_Override__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>This overrides the OOP Max field</inlineHelpText>
        <label>OOP Override?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Occurrence_Location__c</fullName>
        <label>Occurrence Location</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Old_or_New_AE__c</fullName>
        <formula>IF(
TEXT(Account.Owner.Old_or_New__c)=&quot;OLD&quot;, &quot;Old&quot;, &quot;New&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Old=AE was hired before June 2017. Used for CS reports/Dashboards.</inlineHelpText>
        <label>Old or New AE?</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Order_Number__c</fullName>
        <description>TheraPak&apos;s Order Number.  Returned by TheraPak.</description>
        <label>Order Number</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Original_PO__c</fullName>
        <label>Original PO #</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Other_Issue__c</fullName>
        <label>Other Issue</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Out_of_Pocket_Max__c</fullName>
        <label>OOP Maximum</label>
        <precision>7</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Outreach_Needed__c</fullName>
        <label>Outreach Needed?</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Owner_Profile__c</fullName>
        <description>Hidden field that displays case owner&apos;s profile if not assigned to a queue.</description>
        <formula>Owner:User.Profile.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Owner Profile</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PA_Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>Clinical Account for purposes of this PA</inlineHelpText>
        <label>Account</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>$Source.RecordTypeId</field>
                <operation>equals</operation>
                <value>Prior Authorization</value>
            </filterItems>
            <infoMessage>Only Prior Authorizations here</infoMessage>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>PA Cases</relationshipLabel>
        <relationshipName>PA_Cases</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>PA_Associated_with_G360_Test__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Accession # Associated with PA</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>$Source.RecordTypeId</field>
                <operation>equals</operation>
                <value>Prior Authorization</value>
            </filterItems>
            <infoMessage>This creates a case with a Prior Authorization record type.</infoMessage>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Guardant_360_Sample__c</referenceTo>
        <relationshipLabel>Prior Authorizations</relationshipLabel>
        <relationshipName>PA_Cases</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>PA_Cases__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <inlineHelpText>Patient ID for purposes of Prior Authorizations Cases</inlineHelpText>
        <label>Patient</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>$Source.RecordTypeId</field>
                <operation>equals</operation>
                <value>Prior Authorization</value>
            </filterItems>
            <infoMessage>Only Prior Authorization Cases here.</infoMessage>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Patient__c</referenceTo>
        <relationshipLabel>Prior Authorizations</relationshipLabel>
        <relationshipName>Cases1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>PA_Contact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>PA Contact</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>$Source.RecordTypeId</field>
                <operation>equals</operation>
                <value>Prior Authorization</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Prior Authorizations</relationshipLabel>
        <relationshipName>PA_Cases</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>PA_Contact_at_Practice__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>Is there a particular person at the practice who handles these PA cases? (Their contact role must be one of Administrative Assistant, Billing Specialist, Office Manager, or Office Staff)</inlineHelpText>
        <label>PA Contact at Practice</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>Contact.Contact_Role__c</field>
                <operation>equals</operation>
                <value>Administrative Assistant, Billing Specialist, Office Manager, Office Staff</value>
            </filterItems>
            <infoMessage>Who handles PA&apos;s at this office?</infoMessage>
            <isOptional>true</isOptional>
        </lookupFilter>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Prior Auth Contacts at Practice</relationshipLabel>
        <relationshipName>Cases2</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>PFA_Gross__c</fullName>
        <label>PFA Gross</label>
        <precision>11</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>PFA_Needed__c</fullName>
        <defaultValue>false</defaultValue>
        <label>PFA Needed</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>PFA_Received__c</fullName>
        <defaultValue>false</defaultValue>
        <label>PFA Received</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>PFA_Sent__c</fullName>
        <defaultValue>false</defaultValue>
        <label>PFA Sent</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>PatientCase__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Patient</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>$Source.RecordTypeId</field>
                <operation>notEqual</operation>
                <value>Prior Authorization</value>
            </filterItems>
            <infoMessage>Does not include Prior Authorizations</infoMessage>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Patient__c</referenceTo>
        <relationshipLabel>Cases</relationshipLabel>
        <relationshipName>Cases</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Patient_Benefits_Authorization__c</fullName>
        <inlineHelpText>Read-only field that carries over from the PID record.</inlineHelpText>
        <label>Patient Benefits Authorization</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>No</fullName>
                </value>
                <value>
                    <fullName>Signed</fullName>
                </value>
                <value>
                    <fullName>Unsigned</fullName>
                </value>
                <value>
                    <fullName>Unknown</fullName>
                </value>
                <value>
                    <fullName>Yes</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Patient_Demo__c</fullName>
        <label>Patient Demo</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Missing US Address</fullName>
                </value>
                <value>
                    <fullName>Missing Phone Number needed for OOP over $100.00</fullName>
                </value>
                <value>
                    <fullName>Verify Pt&apos;s name</fullName>
                </value>
                <value>
                    <fullName>Verify DOB</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Patient_ID__c</fullName>
        <label>Patient ID</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Patient_Opted_In2__c</fullName>
        <formula>PatientCase__r.Patient_Opted_In__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Formula field derived from same field on the Patient record</inlineHelpText>
        <label>Patient Opted In?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Patient_Responsibility__c</fullName>
        <label>Patient Responsibility</label>
        <precision>8</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Patient_Upset__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Patient Upset</label>
        <type>Checkbox</type>
    </fields>
</CustomObject>